@@ -1,6 +1,8 @@
 ﻿Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
+### 2018-04-16
+	Added: Core.ini option `Immediate configuration saving`, which instead of marking configs for saving on exit, immediately saves them. Disabled by default.
 ### 2018-04-15
 	Added: Extra debug relating to restarting TM.
 	Added: Change log started. Older entries are based on scarce notes.
